--- a/app/templates/accounts/login.html
+++ b/app/templates/accounts/login.html
@@ -18,7 +18,7 @@
                                 <h6 class="h3">
                                     <a target="_blank" rel="noopener noreferrer"
                                        class="text-primary"
-                                       href="https://github.com/app-generator/flask-illustrations-iradesign">Flask IraDesign</a> - Login
+                                       href="https://appseed.us/apps/flask-apps/flask-illustrations-iradesign">Flask IraDesign</a> - Login
                                 </h6>
                                 <p class="text-muted mb-0">
                                     {% if msg %}
