--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -28,7 +28,7 @@
                     <li class="nav-item ">
                         <a class="nav-link" 
                            target="_blank" rel="noopener noreferrer" 
-                           href="https://github.com/app-generator/flask-illustrations-iradesign" >Sources</a>
+                           href="https://appseed.us/apps/flask-apps/flask-illustrations-iradesign" >Product</a>
                     </li>
                 </ul>
                 <!-- Button -->
@@ -38,7 +38,7 @@
                 </a>
                 <!-- Mobile button -->
                 <div class="d-lg-none text-center">
-                    <a href="https://github.com/app-generator/flask-illustrations-iradesign" 
+                    <a href="https://appseed.us/apps/flask-apps/flask-illustrations-iradesign" 
                        target="_blank" rel="noopener noreferrer"
                        class="btn btn-block btn-sm btn-warning">See more details</a>
                 </div>
