--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
                     <!-- Heading -->
                     <h1 class="display-4 text-center text-md-left mb-3">
                         <a  target="_blank" 
-                            href="https://github.com/app-generator/flask-illustrations-iradesign">
+                            href="https://appseed.us/apps/flask-apps/flask-illustrations-iradesign">
                             Flask <strong class="text-primary">IraDesign</strong> 
                         </a>    
                     </h1>
