--- a/app/templates/page-403.html
+++ b/app/templates/page-403.html
@@ -18,7 +18,7 @@
 
                                 <h6 class="h3">Error 403</h6>
                                 <p class="text-muted mb-0">
-                                    Access denied. Please <a href="/login.html">authenticate</a>.
+                                    Access denied. Please <a href="{{ url_for('login') }}">authenticate</a>.
                                 </p>
                                 
                                 <br />
