--- a/app/templates/accounts/register.html
+++ b/app/templates/accounts/register.html
@@ -70,8 +70,9 @@
                                     <button type="submit" name="register" class="btn btn-block btn-primary">Sign in</button></div>
                             </form>
                         </div>
-                        <div class="card-footer px-md-5"><small>Already registered?</small>
-                            <a href="{{ url_for('login') }}" class="small font-weight-bold">Login</a>
+                        <div class="card-footer px-md-5 text-center">
+                            &copy; <a target="_blank" href="https://webpixels.io/?ref=appseed">Webpixels</a> 
+                            - coded by <a target="_blank" href="https://appseed.us/">AppSeed</a>.
                         </div>
                     </div>
                 </div>
