--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,9 +27,7 @@
                     </h1>
                     <!-- Text -->
                     <p class="lead text-center text-md-left text-muted">
-                        Illustrations by <a target="_blank" rel="noopener noreferrer" 
-                                            href="https://www.creative-tim.com/?AFFILIATE=128200">Creative-Tim</a> - 
-                        coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>.
+                        Built with Quick UI by <a target="_blank" rel="noopener noreferrer" href="https://webpixels.io/?ref=appseed">Webpixels</a>.
                     </p>
                     <!-- Buttons -->
                     <div class="text-center text-md-left mt-5">
@@ -38,7 +36,7 @@
                             <span class="btn-inner--icon"><i data-feather="chevron-right"></i></span>
                         </a>
                         <a href="https://appseed.us" 
-                           class="btn btn-neutral btn-icon d-none d-lg-inline-block" target="_blank">AppSeed</a>
+                           class="btn btn-neutral btn-icon d-none d-lg-inline-block" target="_blank">See Product</a>
                     </div>
                 </div>
             </div>
